@@ -91,6 +91,8 @@ class WriteNode( Gaffer.Node ) :
 	def __ensureWriter( self ) :
 		
 		fileName = self["fileName"].getValue()
+		## \todo See equivalent todo in ArnoldRender.__fileName()
+		fileName = Gaffer.Context.current().substitute( fileName )
 		if fileName :
 		
 			object = self["in"].getValue()
