@@ -161,6 +161,8 @@ can be constructed easily.
 
 * When not in gui mode, the Render node waits for the render subprocess to complete before returning from execute().
 
+* StringPlug inputs now automatically substitute $name, ${name} and ### tokens using values from the current context when their value is accessed during a computation. This behaviour can be controlled using the new PerformsSubstitutions plug flag.
+
 0.34.0
 ------
 
